<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#2196F3"
    android:paddingHorizontal="30dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/input_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/email"
                android:hint="@string/enter_your_email_text"
                android:inputType="textEmailAddress"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/input_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password"
                android:hint="@string/enter_your_password_text"
                android:inputType="textPassword"
                android:textColor="#000000" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:id="@+id/btnSignUp"
            android:text="@string/sign_up_text"
            android:backgroundTint="#FF9800"
            android:layout_marginHorizontal="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:id="@+id/btnSignIn"
            android:text="@string/sign_in_text"
            android:backgroundTint="#1AC621"
            android:layout_marginHorizontal="15dp" />
    </LinearLayout>
</LinearLayout>